--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -51,9 +51,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="50dp"
         android:background="#FFEAEA"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +71,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
         app:layout_constraintStart_toStartOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/user_shop" />
+        app:layout_constraintTop_toBottomOf="@+id/user_shop_name" />
 
     <TextView
         android:id="@+id/textView12"
@@ -101,7 +100,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
-        android:id="@+id/user_shop"
+        android:id="@+id/user_shop_name"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -195,6 +194,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/main_color"
         android:text="가입 완료"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_phone" />
