--- a/app/src/main/res/layout/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout/activity_choice_mode_page.xml
@@ -82,7 +82,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/user_shop_name"
+        android:id="@+id/choice_user_shop_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(매장명)"
@@ -129,7 +129,7 @@
         android:layout_marginBottom="1dp"
         android:background="#FFFFFF"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/user_shop_name"
+        app:layout_constraintBottom_toTopOf="@+id/choice_user_shop_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/user" />
