--- a/app/src/main/res/layout/activity_choice_mode_page.xml
+++ b/app/src/main/res/layout/activity_choice_mode_page.xml
@@ -44,10 +44,10 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="800dp"
+        android:layout_width="1220dp"
         android:layout_height="0dp"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="50dp"
         android:background="#FFEAEA"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="@+id/textView"
@@ -63,6 +63,7 @@
         android:layout_marginBottom="30dp"
         android:backgroundTint="#FF5555"
         android:text="고객 모드"
+        android:textColor="#F7F7F7"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/btn_Manage_main_page"
@@ -77,6 +78,7 @@
         android:text="사장님 안녕하세요!"
         android:textColor="#504E4E"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -88,6 +90,7 @@
         android:text="(매장명)"
         android:textColor="#504E4E"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,6 +103,7 @@
         android:layout_marginBottom="20dp"
         android:backgroundTint="#FF5555"
         android:text="관리자 모드"
+        android:textColor="#F7F7F7"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
