--- a/app/src/main/res/layout-land/activity_cart_page.xml
+++ b/app/src/main/res/layout-land/activity_cart_page.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:backgroundTint="#FFFFFF"
+    tools:context=".Manage_main_page">
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -96,6 +100,7 @@
                 android:maxWidth="120dp"
                 android:maxHeight="90dp"
                 android:scaleType="fitCenter"
+                app:layout_constraintBottom_toBottomOf="@+id/btn_Small_menu_page3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/shopping_cart1" />
