--- a/app/src/main/res/layout-land/activity_login_page.xml
+++ b/app/src/main/res/layout-land/activity_login_page.xml
@@ -5,9 +5,11 @@
     tools:context=".Login_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:backgroundTint="#F6ABAB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,24 +21,16 @@
 
             <EditText
                 android:id="@+id/editTextTextPassword2"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_width="440dp"
+                android:layout_height="70dp"
+                android:layout_marginTop="20dp"
                 android:ems="10"
                 android:hint="비밀번호를 입력하세요"
                 android:inputType="textPassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
+                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.9" />
 
             <ImageView
                 android:id="@+id/imageView7"
@@ -50,27 +44,31 @@
 
             <Button
                 android:id="@+id/btn_Choice_mode_page"
-                android:layout_width="500dp"
-                android:layout_height="wrap_content"
+                android:layout_width="480dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="70dp"
+                android:layout_marginEnd="50dp"
                 android:background="#FF5555"
                 android:text="로그인"
-                android:textSize="20sp"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
+                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
                 app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
 
             <Button
                 android:id="@+id/btn_Join_page"
-                android:layout_width="500dp"
-                android:layout_height="wrap_content"
+                android:layout_width="480dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="20dp"
-                android:backgroundTint="#FFEAEA"
+                android:layout_marginBottom="120dp"
+                android:backgroundTint="#F6ABAB"
                 android:text="회원가입"
-                android:textColor="#040303"
-                android:textSize="20sp"
+                android:textColor="#FFFFFF"
+                android:textSize="30dp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/btn_Choice_mode_page"
                 app:layout_constraintStart_toStartOf="@+id/btn_Choice_mode_page"
                 app:layout_constraintTop_toBottomOf="@+id/btn_Choice_mode_page" />
@@ -82,15 +80,13 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline2"
                 app:srcCompat="@drawable/kobbtext" />
 
 
             <EditText
                 android:id="@+id/editTextTextPersonName3"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="10dp"
+                android:layout_width="440dp"
+                android:layout_height="70dp"
                 android:layout_marginTop="80dp"
                 android:layout_marginBottom="10dp"
                 android:ems="10"
