--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,7 +7,7 @@
     tools:context=".Login_page">
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/login_user_pw"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -17,7 +17,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
+        app:layout_constraintTop_toBottomOf="@+id/login_user_id" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -48,7 +48,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+        app:layout_constraintTop_toBottomOf="@+id/login_user_pw" />
 
     <Button
         android:id="@+id/btn_Join_page"
@@ -76,7 +76,7 @@
 
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/login_user_id"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -85,7 +85,7 @@
         android:ems="10"
         android:hint="  User name"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
+        app:layout_constraintBottom_toTopOf="@+id/login_user_pw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView7" />
@@ -94,16 +94,16 @@
         android:id="@+id/imageView8"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword2"
+        app:layout_constraintEnd_toStartOf="@+id/login_user_pw"
+        app:layout_constraintTop_toTopOf="@+id/login_user_pw"
         app:srcCompat="@drawable/passwordkey2" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
-        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3"
+        app:layout_constraintEnd_toStartOf="@+id/login_user_id"
+        app:layout_constraintTop_toTopOf="@+id/login_user_id"
         app:srcCompat="@drawable/usericon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
