--- a/app/src/main/res/layout-land/activity_login_page.xml
+++ b/app/src/main/res/layout-land/activity_login_page.xml
@@ -47,7 +47,6 @@
                 android:layout_width="480dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="70dp"
-                android:layout_marginEnd="50dp"
                 android:background="#FF5555"
                 android:text="로그인"
                 android:textColor="#FFFFFF"
@@ -109,6 +108,7 @@
                 android:id="@+id/imageView10"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
                 app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
                 app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName3"
                 app:srcCompat="@drawable/usericon" />
