--- a/app/src/main/res/layout-land/activity_user_info_page.xml
+++ b/app/src/main/res/layout-land/activity_user_info_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#FFFFFF"
-    tools:context=".Control_inventory_page">
+    tools:context=".User_info_page">
 
     <ScrollView
         android:layout_width="0dp"
@@ -19,10 +19,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-
-
-
 
 
 
