윤정 가로모드 commit

--- a/app/src/main/res/layout-land/activity_mode_change_page.xml
+++ b/app/src/main/res/layout-land/activity_mode_change_page.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Manage_main_page"
+    tools:context=".Mode_change_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
