--- a/app/src/main/res/layout/activity_check_menu_page.xml
+++ b/app/src/main/res/layout/activity_check_menu_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#FFFFFF"
-    tools:context=".Manage_main_page">
+    tools:context=".Check_menu_page">
 
 
     <ScrollView
