--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     tools:context=".Login_page">
 
     <EditText
@@ -12,6 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="  Password"
         android:inputType="textPassword"
@@ -82,6 +84,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="10dp"
+        android:background="@android:color/transparent"
         android:ems="10"
         android:hint="  User name"
         android:inputType="textPersonName"
