--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.10218978" />
+        app:layout_constraintGuide_begin="82dp" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -26,7 +26,7 @@
         app:srcCompat="@drawable/kobbicon" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_Mode_change_page"
         android:layout_width="170dp"
         android:layout_height="55dp"
         android:layout_marginEnd="8dp"
@@ -46,7 +46,7 @@
         android:gravity="center_horizontal"
         android:textColor="#504E4E"
         android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
         android:textColor=" #FF5555"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/btn_Mode_change_page"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -107,30 +107,45 @@
         android:id="@+id/imageButton"
         android:layout_width="500dp"
         android:layout_height="500dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="100dp"
         android:backgroundTint="#FF5555"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toStartOf="@+id/imageButton2"
-        app:layout_constraintHorizontal_bias="0.044"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.571"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.605"
         tools:srcCompat="@drawable/eat2" />
 
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="500dp"
         android:layout_height="500dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="100dp"
         android:backgroundTint="#FF5555"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.571"
         tools:srcCompat="@drawable/takeout2" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.9" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/kobbtext" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
