--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -41,47 +41,37 @@
         android:background="#FFF7F7"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="800dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="50dp"
-        android:background="#FFEAEA"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/guideline"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="아이디"
         android:textColor="#504E4E"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="490dp"
-        tools:layout_editor_absoluteY="272dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/user_shop_name" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="매장이름"
         android:textColor="#504E4E"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
-        tools:layout_editor_absoluteY="186dp" />
+        app:layout_constraintStart_toStartOf="@+id/user_shop_name"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/user_id"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -90,13 +80,13 @@
         android:hint="  아이디를 입력해 주세요"
         android:inputType="textPersonName"
         android:textColorHint="#504E4E"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
+        app:layout_constraintEnd_toEndOf="@+id/user_shop_name"
         app:layout_constraintHorizontal_bias="0.405"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
+        app:layout_constraintStart_toStartOf="@+id/user_shop_name"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/user_shop_name"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="10dp"
@@ -113,15 +103,16 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:text="비밀번호"
         android:textColor="#504E4E"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/user_id" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/user_pw"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="@color/white"
@@ -129,35 +120,37 @@
         android:hint="  비밀번호를 입력해 주세요"
         android:inputType="textPersonName"
         android:textColorHint="#504E4E"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
-        tools:layout_editor_absoluteY="398dp" />
+        app:layout_constraintEnd_toEndOf="@+id/user_id"
+        app:layout_constraintStart_toStartOf="@+id/user_id"
+        tools:layout_editor_absoluteY="356dp" />
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         android:text="전화번호"
         android:textColor="#504E4E"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintEnd_toEndOf="@+id/textView13"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView13"
+        app:layout_constraintTop_toBottomOf="@+id/user_pw" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
+        android:id="@+id/user_phone"
         android:layout_width="300dp"
         android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:ems="10"
         android:hint="  전화번호를 입력해 주세요"
         android:inputType="textPersonName"
         android:textColorHint="#504E4E"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
-        tools:layout_editor_absoluteY="476dp" />
+        app:layout_constraintEnd_toEndOf="@+id/user_pw"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/user_pw"
+        app:layout_constraintTop_toBottomOf="@+id/tv" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -177,24 +170,24 @@
         android:textColor="#504E4E"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
+
     <Button
-        android:id="@+id/btn_Login_page"
+        android:id="@+id/btn_join"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:background="@color/main_color"
         android:text="가입 완료"
         android:textColor="#504E4E"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
-
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_phone" />
 
     <ImageButton
         android:id="@+id/btn_User_info_page"
