--- a/app/src/main/res/layout/activity_join_success_page.xml
+++ b/app/src/main/res/layout/activity_join_success_page.xml
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <Button
-        android:id="@+id/btn_Login_page"
+        android:id="@+id/btn_join"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
