--- a/app/src/main/res/layout/activity_start_kiosk_page.xml
+++ b/app/src/main/res/layout/activity_start_kiosk_page.xml
@@ -40,7 +40,7 @@
         app:srcCompat="@drawable/kobbicon" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_Mode_change_page"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
