--- a/app/src/main/res/layout/activity_choice_pay_page.xml
+++ b/app/src/main/res/layout/activity_choice_pay_page.xml
@@ -151,13 +151,14 @@
         android:layout_marginStart="320dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_radius"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
         android:drawableStart="@drawable/kakaopay"
+        android:paddingLeft="30dp"
+        android:paddingTop="4dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="4dp"
         android:text="카카오페이"
-        android:textSize="34sp"
+        android:textColor="#F7F7F7"
+        android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
@@ -169,7 +170,12 @@
         android:layout_marginEnd="320dp"
         android:background="@drawable/btn_radius"
         android:drawableStart="@drawable/payco"
+        android:paddingLeft="20dp"
+        android:paddingTop="4dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="4dp"
         android:text="페이코"
+        android:textColor="#F7F7F7"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
