--- a/app/src/main/res/layout/activity_customer_main_page.xml
+++ b/app/src/main/res/layout/activity_customer_main_page.xml
@@ -104,14 +104,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/btn_Eat_main_menu_page"
         android:layout_width="500dp"
         android:layout_height="500dp"
         android:layout_marginStart="100dp"
         android:backgroundTint="#FF5555"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+        app:layout_constraintEnd_toStartOf="@+id/btn_TakeOut_main_menu_page"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
@@ -119,7 +119,7 @@
         tools:srcCompat="@drawable/eat2" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/btn_TakeOut_main_menu_page"
         android:layout_width="500dp"
         android:layout_height="500dp"
         android:layout_marginEnd="100dp"
