--- a/app/src/main/res/layout-land/activity_join_page.xml
+++ b/app/src/main/res/layout-land/activity_join_page.xml
@@ -226,7 +226,7 @@
 
 
         <ImageButton
-            android:id="@+id/btn_User_info_page"
+            android:id="@+id/btn_User_info_page1"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
