--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -190,7 +190,7 @@
         app:layout_constraintTop_toBottomOf="@+id/user_phone" />
 
     <ImageButton
-        android:id="@+id/btn_User_info_page"
+        android:id="@+id/btn_User_info_page1"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginEnd="16dp"
